exports[`scope can be an array 1`] = `
Object {
  "foo": Object {
    "bar": Object {
      "name": "from handler",
    },
  },
}
`;

exports[`scope can be overridden from the parent 1`] = `
Object {
  "parentScope": Object {
    "name": "from handler",
  },
}
`;

exports[`scope is used to set the location in redux state 1`] = `
Object {
  "ascope": Object {
    "name": "from handler",
  },
}
`;
